<resources>
    <string name="app_name">MyContactPro</string>

    <!-- Menu strings -->
    <string name="menu_add">Ajouter un contact</string>
    <string name="menu_update">Éditer</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_all">Tous les contacts</string>
    <string name="menu_favorites">Favoris</string>

    <!-- Field strings -->
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="address">Adresse</string>
    <string name="phone">Téléphone</string>
    <string name="email">Email</string>
    <string name="company">Société</string>
    <string name="sector">Secteur</string>

    <!-- Button strings -->
    <string name="add">Ajouter</string>
    <string name="update">Mettre à jour</string>
    <string name="cancel">Annuler</string>
    <string name="add_favorite">Ajouter aux favoris</string>
    <string name="delete_favorite">Retirer des favoris</string>
    <string name="call">Appeler</string>
    <string name="localise">Localiser</string>
    <string name="sms">SMS</string>
    <string name="see_more">Voir plus</string>

    <!-- Toast strings -->
    <string name="incorrect_form">Certains champs sont vides ou incorrects</string>

    <!-- Sectors spinner -->
    <string-array name="sectors_array">
        <item>Industrie</item>
        <item>Informatique</item>
        <item>Santé</item>
        <item>Alimentation</item>
        <item>Énergie</item>
        <item>Juridique</item>
        <item>Immobilier</item>
        <item>Finances</item>
    </string-array>

</resources>